@@ -14,7 +14,6 @@ import io.unitycatalog.hadoop.internal.id.DeltaStagingTableCredId;
 import io.unitycatalog.hadoop.internal.id.DeltaTableCredId;
 import io.unitycatalog.hadoop.internal.id.PathCredId;
 import io.unitycatalog.hadoop.internal.id.TableCredId;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -461,7 +460,7 @@ abstract class CredPropsBaseTest {
   static GenericCredentialFetcher mockGenericCredentialFetcher(GenericCredential... creds) {
     GenericCredentialFetcher api = mock(GenericCredentialFetcher.class);
     try {
-      when(api.createCredentials()).thenReturn(Arrays.asList(creds));
+      when(api.createCredentials()).thenReturn(List.of(creds));
     } catch (Exception e) {
       throw new RuntimeException(e);
     }
